Refactor: 중복된 로직 삭제 및 중복된 클래스 삭제